2006-04-19  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: .wax is a suffix for ASX playlists as well

2006-04-18  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Remove "no" from ALL_LINGUAS

2006-04-16  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make audio/x-ms-asx's magic higher priority
	than HTML to avoid matching HTML on "<TITLE" present in an ASX file
	(Closes GNOME #338328 and #338515)

2006-04-14  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: .asx files are of audio/x-ms-asx, not ASF
	files

2006-04-05  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Remove "application/pdf" subclassing
	information. Thanks to Sebastien Bacher and Bastien Nocera.

2006-04-05  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Rename "text/rss" to
	"application/rss+xml", make "text/rss" an alias, make it a subclass of
	"application/xml".  Thanks to Sebastien Bacher.

2006-04-05  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Make "application/postscript",
	a subclass of "text/plain". Thanks to Sebastian Heutling,
	Tristan Wibberley and Sebastien Bacher.

	Add missing sub-classing information to a few dozen other
	MIME types, including "application/rtf", "application/pdf",
	ODF and OOo MIME types.

	* Makefile.am:
	* test-subclassing.c:
	Add simple XML parser that checks for presence of "sub-class-of"
	nodes in freedesktop.org.xml and outputs MIME types that don't
	provide the flag.

2006-03-18  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Add "lt" (Lithuanian) to ALL_LINGUAS.

2006-03-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add a mime-type for WMA (Closes: #2178),
	and make it and WMV sub-classes of ASF (Closes: #2051), patches from
	Stanislav Brabec <sbrabec@suse.cz>

2006-03-15  Bastien Nocera  <hadess@hadess.net>

	* configure.in: also install the Danish translation, patch from 