@@ -1,3 +1,7 @@
+2006-05-09  Christian Neumair  <chris@gnome-de.org>
+
+	* freedesktop.org.xml.in: lower priority of "%" magic patterns to 10.
+
 2006-04-19  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: .wax is a suffix for ASX playlists as well
